tests/golden/reject/partition_rerun_reject.goo
// P6 M1 Task 6 (Obligation 2 bookkeeping / Step 4): lanes.Run CONSUMES its
// Partitioned argument (same move machinery as obligation 1). A SECOND
// lanes.Run on the same binding `p` reaches a partition already handed out
// to a prior Run and must be rejected. (Re-Run of a DIFFERENT partition
// stays legal — see examples/lanes_repartition_probe.goo.)
// docs/superpowers/specs/2026-07-11-p6-lanes-m1-design.md Component 4.
package main

import "lanes"

func main() {
	data := []float64{1.0, 2.0, 3.0, 4.0}
	p := lanes.Partition(data, 2)
	out1 := lanes.Run(p, 1, func(ctx *lanes.Lane) {
		t := ctx.Own()
		_ = t
	})
	_ = out1
	out2 := lanes.Run(p, 1, func(ctx *lanes.Lane) {
		t := ctx.Own()
		_ = t
	})
	_ = out2
}
